Add hotelier